# abacus-develop

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATIONS.md  CMakeLists.txt  Dockerfile  Dockerfile.cuda  Dockerfile.gnu  Dockerfile.intel  README  README.md  entrypoint.sh  inf.json  paw_cell.cpp  symmetry_rhog.cpp  unitcell.cpp
ABACUS.develop/: CMakeLists.txt  README  README.md  see.txt
ABACUS.develop/cmake/: CMakeLists.txt  README.md
ABACUS.develop/modules/: FindCereal.cmake  FindELPA.cmake  FindFFTW3.cmake  FindScaLAPACK.cmake
ABACUS.develop/source/: CMakeLists.txt  Makefile  Makefile.Objects  Makefile.system  Makefile.system.centos7-devel  Makefile.vars  README  dc_driv.cpp  dc_driv.h  driver.cpp  driver.h  input.cpp  input.h  input_conv.cpp  input_conv.h  input_update.cpp  main.cpp  run_frag.cpp  run_frag.h  run_lcao.cpp  run_lcao.h  run_linearscaling.cpp  run_linearscaling.h  run_pw.cpp  run_pw.h
ABACUS.develop/tests/: Autotest.sh  README  SCOPE  clean.sh  general_info
ABACUS.develop/tools/: pdos.f
python/pyabacus/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml
source/: .Makefile.vars.swp  CMakeLists.txt  Makefile  Makefile.Objects  Makefile.gnu  Makefile.system  Makefile.system.intel  Makefile.vars  Makefile.vars-copy  Makefile.vars.intel  Makefile_intel2015.system  README  driver.cpp  driver.h  driver_run.cpp  input.cpp  input.h  input_conv.cpp  input_conv.h  input_update.cpp  input_update.h  main.cpp  run_lcao.cpp  run_lcao.h  run_pw.cpp  run_pw.h  version.h
source/module_ORB/: ORB_atomic_lm.cpp  ORB_gaunt_table.cpp  ORB_nonlocal.h  ORB_table_alpha.cpp  ORB_table_alpha.h  ORB_table_beta.h
source/module_base/: CMakeLists.txt  Makefile  Makefile.Objects  abfs-vector3_order.cpp  abfs-vector3_order.h  array_pool.h  assoc_laguerre.cpp  assoc_laguerre.h  atom_in.h  blacs_connector.h  blas_connector.h  clebsch_gordan_coeff.cpp  clebsch_gordan_coeff.h  complexarray.cpp  complexarray.h  complexmatrix.cpp  complexmatrix.h  constants.h  container_operator.h  cubic_spline.cpp  cubic_spline.h  element_basis_index.cpp  element_basis_index.h  element_covalent_radius.h  element_elec_config.h  element_name.h  export.cpp  export.h  formatter.h  formatter_contextfmt.cpp  formatter_contextfmt.h  formatter_fmt.cpp  formatter_fmt.h  formatter_physfmt.cpp  formatter_physfmt.h  formatter_table.cpp  formatter_table.h  gather_math_lib_info.cpp  global_file.cpp  global_file.h  (+92 more)
source/module_cell/: CMakeLists.txt  Makefile  Makefile.Objects  atom_pseudo.cpp  atom_pseudo.h  atom_spec.cpp  atom_spec.h  cal_atoms_info.h  cell_index.cpp  cell_index.h  cell_unittest.cpp  cell_unittest.h  check_atomic_stru.cpp  check_atomic_stru.h  klist.cpp  klist.h  main.cpp  parallel_kpoints.cpp  parallel_kpoints.h  print_cif.cpp  pseudo.cpp  pseudo.h  pseudo_nc.cpp  pseudo_nc.h  read_atoms.cpp  read_cell_pseudopots.cpp  read_pp.cpp  read_pp.h  read_pp_blps.cpp  read_pp_complete.cpp  read_pp_upf100.cpp  read_pp_upf201.cpp  read_pp_vwr.cpp  setup_nonlocal.cpp  setup_nonlocal.h  unitcell.cpp  unitcell.h  unitcell_data.h  unitcell_pseudo.cpp  unitcell_pseudo.h
source/module_deepks/: CMakeLists.txt  LCAO_deepks.cpp  LCAO_deepks.h  LCAO_deepks_fdelta.cpp  LCAO_deepks_io.cpp  LCAO_deepks_mpi.cpp  LCAO_deepks_odelta.cpp  LCAO_deepks_pdm.cpp  LCAO_deepks_psialpha.cpp  LCAO_deepks_torch.cpp  LCAO_deepks_vdelta.cpp  LCAO_descriptor.cpp  LCAO_descriptor.h  LCAO_descriptor_dV.cpp  LCAO_descriptor_io.cpp
source/module_dftu/: dftu.cpp  dftu.h  dftu_folding.cpp  dftu_force.cpp  dftu_hamilt.cpp  dftu_io.cpp  dftu_occup.cpp  dftu_tools.cpp  dftu_yukawa.cpp
source/module_elecstate/: CMakeLists.txt  cal_dm.h  dm2d_to_grid.cpp  elecstate.cpp  elecstate.h  elecstate_energy.cpp  elecstate_energy_terms.cpp  elecstate_exx.cpp  elecstate_getters.cpp  elecstate_getters.h  elecstate_lcao.cpp  elecstate_lcao.h  elecstate_lcao_cal_tau.cpp  elecstate_lcao_tddft.cpp  elecstate_lcao_tddft.h  elecstate_print.cpp  elecstate_pw.cpp  elecstate_pw.h  elecstate_pw_cal_tau.cpp  elecstate_pw_sdft.cpp  elecstate_pw_sdft.h  elecstatepw.cpp  elecstatepw.h  energy.cpp  energy.h  fp_energy.cpp  fp_energy.h  magnetism.cpp  magnetism.h  math_tools.h  occupy.cpp  occupy.h
source/module_ensolver/: CMakeLists.txt  Makefile.ensolver  en_solver.cpp  en_solver.h
source/module_esolver/: CMakeLists.txt  Makefile.Objects  Makefile.ensolver  cal_edm_tddft.cpp  dftu_cal_occup_m.cpp  dpks_cal_e_delta_band.cpp  esolver.cpp  esolver.h  esolver_dp.cpp  esolver_dp.h  esolver_fp.cpp  esolver_fp.h  esolver_ks.cpp  esolver_ks.h  esolver_ks_lcao.cpp  esolver_ks_lcao.h  esolver_ks_lcao_elec.cpp  esolver_ks_lcao_tddft.cpp  esolver_ks_lcao_tddft.h  esolver_ks_lcao_tmpfunc.cpp  esolver_ks_lcaopw.cpp  esolver_ks_lcaopw.h  esolver_ks_pw.cpp  esolver_ks_pw.h  esolver_ks_pw_tool.cpp  esolver_lj.cpp  esolver_lj.h  esolver_of.cpp  esolver_of.h  esolver_of_interface.cpp  esolver_of_tool.cpp  esolver_sdft_pw.cpp  esolver_sdft_pw.h  esolver_sdft_pw_tool.cpp  io_npz.cpp  kedf_tf.cpp  kedf_tf.h  kedf_vw.cpp  kedf_vw.h  kedf_wt.cpp  (+15 more)
source/module_gint/: CMakeLists.txt  gint.cpp  gint.h  gint_fvl.cpp  gint_gamma.cpp  gint_gamma.h  gint_gamma_env.cpp  gint_gamma_mull.cpp  gint_gamma_vl.cpp  gint_k.h  gint_k_env.cpp  gint_k_pvdpr.cpp  gint_k_pvpr.cpp  gint_k_sparse.cpp  gint_k_sparse1.cpp  gint_rho.cpp  gint_tau.cpp  gint_tools.cpp  gint_tools.h  gint_vl.cpp  grid_bigcell.cpp  grid_meshball.cpp  grid_meshcell.cpp  grid_meshk.cpp  grid_technique.cpp  grid_technique.h
source/module_grid/: Makefile  Makefile.Objects  Makefile.system  Makefile.vars  main.cpp
source/module_hamilt/: CMakeLists.txt  ekinetic_pw.cpp  ekinetic_pw.h  hamilt.h  hamilt_lcao.cpp  hamilt_lcao.h  hamilt_lcao_folding.cpp  hamilt_pw.cpp  hamilt_pw.h  hamiltlcao.cpp  hamiltlcao.h  hamiltpw.cpp  hamiltpw.h  matrixblock.h  meta_pw.cpp  meta_pw.h  nonlocal_pw.cpp  nonlocal_pw.h  operator.cpp  (+3 more)
tests/: Autotest.sh  CASES  CMakeLists.txt  Single_job.sh  check_file.cpp  clean.sh
(+8193 files in other folders)
